# rinha2024q1

./: Cargo.toml
src/: main.rs
src/models/: models.rs
